愛心功能，bk加入功能

--- a/Gemma/Assets/css/OnlineStore.css
+++ b/Gemma/Assets/css/OnlineStore.css
@@ -83,11 +83,11 @@ p {
     height: 20px;
 }
 
-.heart img, .small-color {
+.heart i, .small-color {
     display: inline-block;
 }
 
-.position-left img{
+.position-left i{
     position: absolute;
     left: 10%;
     bottom: 20%;
