--- a/Gemma/Views/Shared/_Layout.cshtml
+++ b/Gemma/Views/Shared/_Layout.cshtml
@@ -2,6 +2,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+    @{
+        if (Session["CartItemCount"] == null)
+        {
+            Session["CartItemCount"] = 0;
+        }
+        if (Session["Count"] == null)
+        {
+            Session["Count"] = 0;
+        }
+    }
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
