--- a/Gemma/Views/Journall/JournalList6.cshtml
+++ b/Gemma/Views/Journall/JournalList6.cshtml
@@ -20,14 +20,14 @@
             height: 100%;
             transition:0.5s ease-in-out;
         }
-        span {
+        .wordLeft span {
            font-size:25px;font-weight:bold;
             margin-left:450px;
         }
-         .img1 img:hover {
-		transform : scale(1.02);
-        transition:0.5s ease-in-out;
-	}
+        .img1 img:hover {
+            transform: scale(1.02);
+            transition: 0.5s ease-in-out;
+        }
 	.img2 img:hover {
 		transform : scale(1.02);
         transition:0.5s ease-in-out;
