--- a/Gemma/Views/Journall/JournalList1.cshtml
+++ b/Gemma/Views/Journall/JournalList1.cshtml
@@ -4,7 +4,7 @@
 }
 
 @section topCSS{
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    @*<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">*@
     <style>
         body {
             background-color: #F5F5F5;
@@ -16,14 +16,14 @@
             transition:0.5s ease-in-out;
         }
 
-        span {
+        .wordLeft span {
            font-size:25px;font-weight:bold;
             margin-left:380px;
         }
-         .img1 img:hover {
-		transform : scale(1.02);
-        transition:0.5s ease-in-out;
-	}
+        .img1 img:hover {
+            transform: scale(1.02);
+            transition: 0.5s ease-in-out;
+        }
 	
         .wordLeft {
             margin-top:120px;
