--- a/Gemma/Views/Shared/_Layout.cshtml
+++ b/Gemma/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
     @Scripts.Render("~/bundles/modernizr")
     <link href="~/Assets/css/FixedMenu.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
 
     @RenderSection("topCSS", required: false)
