--- a/Gemma/Assets/css/FixedMenu.css
+++ b/Gemma/Assets/css/FixedMenu.css
@@ -10,7 +10,8 @@ a {
     color: black;
     text-decoration: none;
     font-size: 20px;
-    font-family: 'Roboto', sans-serif;
+    /*font-family: 'Roboto', sans-serif;*/
+    font-family: sans-serif;
 }
 
 /*消除下拉式選單的箭頭*/
@@ -19,8 +20,15 @@ a {
 }
 /*CSS for _Header.cshtml*/
 .logo img {
+    /*height: 75%;
+    width: 75%;*/
+
+    /*以下新加入*/
     height: 75%;
-    width: 75%;
+    width: 23%;
+    position: absolute;
+    top: 40%;
+    left: 3%;
 }
 
 .header {
@@ -34,18 +42,32 @@ a {
         color: black;
     }
 
-.header-nav {
+/*.header-nav {
     float: left;
     left: 15%;
     position: relative;
+
+}*/
+
+/*重新定位NAVBAR裡面的icon*/
+.header-nav{
+    position:absolute;
+    top:25%;
+    right:3%;
 }
+
+
+    /*新加入設定高度用*/
+    .navblock {
+        height: 180px;
+    }
 
 .header-tool {
     height: 67px;
 }
 
 .PaddingTopCSS {
-    padding-top: 200px;
+    padding-top: 180px;
 }
 /*CSS for _Social_Icons.cshtml*/
 .social-icons {
@@ -165,4 +187,80 @@ a {
         }
 ::placeholder {
     color: red;
+}
+
+
+
+
+/*NAVBAR動畫*/
+/*下滑NAVBAR變小動畫*/
+.fixed {
+    /*height: 80px;
+    transition-duration: 1s;*/
+    animation-name: downnavbar;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+.photoanimation {
+    /*width: 10%;
+    height: 85%;
+    transition-duration: 1s;*/
+    animation-name: downimg;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+/*上滑NAVBAR回復動畫*/
+.fixed-2 {
+    /*height: 180px;
+    transition-duration: 1s;*/
+    animation-name: upnavbar;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+.photoanimation-2 {
+    /*height: 85%;
+    width: 23%;*/
+    animation-name: upimg;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes downnavbar{
+    0% {
+        height: 180px;
+    }
+    100% {
+        height: 80px;
+    }
+}
+@keyframes upnavbar{
+    0% {
+        height: 80px;
+    }
+    100% {
+        height: 180px;
+    }
+}
+
+@keyframes downimg{
+    0% {
+        height: 75%;
+        width: 23%;
+    }
+    100% {
+        width: 15%;
+        height: 95%;
+    }
+}
+@keyframes upimg {
+    0% {
+        width: 15%;
+        height: 95%;
+    }
+
+    100% {
+        height: 75%;
+        width: 23%;
+    }
 }
