--- a/Gemma/Views/Shared/_NewLoginPartial.cshtml
+++ b/Gemma/Views/Shared/_NewLoginPartial.cshtml
@@ -7,7 +7,7 @@
         @Html.AntiForgeryToken()
 
 
-        <ul class="nav header-tool">
+        <ul class="nav header-tool ul-2">
 
             <li class="account nav-item dropdown">
 
