--- a/Gemma/Views/OnlineStore/FindBrand.cshtml
+++ b/Gemma/Views/OnlineStore/FindBrand.cshtml
@@ -143,7 +143,7 @@
                 $.ajax({
                 type: "POST",
                 url: "/BookMark/addwishlist",
-                data: { ProductId: productId },
+                data: { ProductId: productId},
                     dataType: "text",
                     success: function (response) { $("#MyWish").text("(" + response + ")"); }
             });
@@ -154,9 +154,9 @@
                 $.ajax({
                 type: "POST",
                 url: "/BookMark/removewishlist",
-                data: { ProductId: productId },
+                data: { ProductId: productId  },
                     dataType: "text",
-                success: function (response) { $("#MyWish").text("(" + response + ")"); }
+                success: function () { $("#MyWish").text("(" + response + ")"); }
             });
             }
         })
