--- a/Gemma/Views/Shared/_Layout.cshtml
+++ b/Gemma/Views/Shared/_Layout.cshtml
@@ -38,8 +38,36 @@
     @Scripts.Render("~/bundles/jqueryval")
     <script src="~/Assets/js/FixedMenuForIG.js"></script>
 
+  
+    <!-- Load Facebook SDK for JavaScript -->
+    <div id="fb-root"></div>
+    <script>
+        window.fbAsyncInit = function () {
+            FB.init({
+                xfbml: true,
+                version: 'v5.0'
+            });
+        };
+
+        (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = 'https://connect.facebook.net/zh_TW/sdk/xfbml.customerchat.js';
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
+
+    <!-- Your customer chat code -->
+    <div class="fb-customerchat"
+         attribution=setup_tool
+         page_id="368171660627475"
+         theme_color="#e68585"
+         logged_in_greeting="您好,客服人員上班時間為周一至周五9:00-18:00，收到訊息將會盡快回復給您，請耐心稍後，有關於Gemma鞋子問題，可撥打客服電話0800-022-334!"
+         logged_out_greeting="您好,客服人員上班時間為周一至周五9:00-18:00，收到訊息將會盡快回復給您，請耐心稍後，有關於Gemma鞋子問題，可撥打客服電話0800-022-334!">
+    </div>
     @RenderSection("scripts", required: false)
     @RenderSection("endCSS", required: false)
     @RenderSection("endJS", required: false)
+    <script src="~/Assets/js/fbsdk.js"></script>
 </body>
 </html>
