add facebook api

--- a/Gemma/Views/Details/_Layout.cshtml
+++ b/Gemma/Views/Details/_Layout.cshtml
@@ -276,13 +276,39 @@
             <br />
         </div>
     </div>
-
+    <div id="fb-root"></div>
+    <!-- Your customer chat code -->
+    <div class="fb-customerchat"
+         attribution=setup_tool
+         page_id="368171660627475"
+         theme_color="#e68585"
+         logged_in_greeting="您好,客服人員上班時間為周一至周五9:00-18:00，收到訊息將會盡快回復給您，請耐心稍後，有關於Gemma鞋子問題，可撥打客服電話0800-022-334!"
+         logged_out_greeting="您好,客服人員上班時間為周一至周五9:00-18:00，收到訊息將會盡快回復給您，請耐心稍後，有關於Gemma鞋子問題，可撥打客服電話0800-022-334!">
+    </div>
     @Scripts.Render("~/bundles/jquery")
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>    @Scripts.Render("~/bundles/chartjs")
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     @Scripts.Render("~/bundles/jqueryval")
     <script src="~/Assets/js/FixedMenuForIG.js"></script>
     <script src="~/Assets/js/navbaranimation.js"></script>
+    <!-- Load Facebook SDK for JavaScript -->
+    <script>
+        window.fbAsyncInit = function () {
+            FB.init({
+                xfbml: true,
+                version: 'v5.0'
+            });
+        };
+
+        (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = 'https://connect.facebook.net/zh_TW/sdk/xfbml.customerchat.js';
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
+    <script src="~/Assets/js/fbsdk.js"></script>
 
     @RenderSection("scripts", required: false)
     @RenderSection("endCSS", required: false)
